Quick fix to prevent the home header image to overflow on top of the screen

--- a/shuttleofx_client/static_tmp/styles/home.less
+++ b/shuttleofx_client/static_tmp/styles/home.less
@@ -32,6 +32,8 @@
                 bottom: -12em;
                 //left: -1px;
                 width: 100%;
+                max-height: 240px;
+                max-width: 1328px;
             }
         }
         .header-content {
